# compainon

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt
ai_health_board/: cache.py  config.py  input.py  models.py  scheduler.py  wifi_display_hook.py
ai_health_board/display/: __init__.py  base.py  mock_png.py  waveshare_2in13.py
ai_health_board/providers/: __init__.py  lotus_health.py  lotus_stats.py  statuspage.py
ai_health_board/screens/: __init__.py  agent_feed.py  device_status.py  health.py  status_board.py  tamagotchi.py
cache/: status.json
commands/: init.py
config/: providers.yaml  providers.yaml.example  screens.yml.example
core/: config.py  scheduler.py  wifi_display_hook.py
core/display/: __init__.py  base.py  mock_png.py  waveshare_2in13_v1.py  waveshare_2in13_v2.py  waveshare_2in13_v3.py  waveshare_2in13_v4.py  waveshare_2in13b_v3.py  waveshare_2in13b_v4.py  waveshare_2in13bc.py  waveshare_2in13d.py  waveshare_2in13g.py
core/providers/: __init__.py  base.py
core/screens/: agent_feed.py  base.py  status_board.py  tamagotchi.py
scripts/: doctor.sh  install.sh  install_services.sh  pisugar_button.py
systemd/: ai-health-board.service  pisugar-button.service
tests/: test_config.py  test_input.py  test_new_modules.py  test_statuspage_provider.py  test_ui_templates.py
ui/preview/: __init__.py
ui/templates/: __init__.py  agent_feed.py  device_status.py  status_board.py  tamagotchi.py
wifi/docs/: wifi-setup.md
wifi/provisioning/: __init__.py  __main__.py  app.py  config.py  hotspot.py  nm.py  scanner.py  (+1 more)
(+8 files in other folders)
